# iloader-next

./: .gitignore  Cargo.toml  README.md  package.json
.zed/: settings.json
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: build-wasm.ts
frontend/src/: App.css  App.tsx  PlatformGate.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: device.rs  lib.rs  main.rs
frontend/src/lib/: client.ts  error.ts  tauriClient.ts  wasmClient.ts
frontend/src/parts/: Account.tsx  Devices.tsx  Header.css  Header.tsx
rust/iloader-core/: Cargo.toml
rust/iloader-core/src/: device.rs  error.rs  lib.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs  local_storage.rs  webusb.rs  webusb_provider.rs
worker/: package.json
worker/src/: index.ts
