[package]
name    = "iloader-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
idevice.workspace = true
plist = "1.8"
rootcause = "0.12.1"
thiserror = "2.0.18"
strum = { version = "0.28.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
isideload = { version = "0.2.22", path = "../../../isideload/isideload", default-features = false }